added head block

--- a/demo/default.pug
+++ b/demo/default.pug
@@ -12,7 +12,7 @@ html
         script(src="../external/jquery-3.3.1.min.js")
         script(src="../external/knockout-3.4.2.js")
         script(src="../external/moment.js")
-        block scripts
+        block head
     body
         block content
 
