--- a/demo/default.pug
+++ b/demo/default.pug
@@ -9,6 +9,7 @@ html
         style(type="text/css").
             label, input {display:block}
             div {overflow:hidden; min-height: 20px;}
+            dd {font-weight:bold}
         script(src="../external/jquery-3.3.1.min.js")
         script(src="../external/knockout-3.4.2.js")
         script(src="../external/moment.js")
