--- a/docs/.default.pug
+++ b/docs/.default.pug
@@ -17,4 +17,4 @@ html
     body
         block content
 
-        a(href="../", style="position: absolute; right: 10px; top: 10px;") &laquo; Back
+        a(href="./", style="position: absolute; right: 10px; top: 10px;") &laquo; Back
