--- a/docs/tabs.pug
+++ b/docs/tabs.pug
@@ -38,7 +38,7 @@ block content
 
         // ------------------------------------------------------------------------
 
-        h4 Using the `preselected:true` parameter on the second tab
+        h3 Using the `preselected:true` parameter on the second tab
 
         ko-tabs
             ko-tab(params="label: 'Tab #1'")
@@ -52,12 +52,13 @@ block content
 
         // ------------------------------------------------------------------------
 
-        h4 Using the `keyForRestore` option, allowing to preselect the last used tab whenever the tabs component gets re-rendered
+        h3 Using the `keyForRestore` option, allowing to restore the last used tab whenever the tabs component gets re-rendered
         p
-            button(data-bind="click: () => secondTabsEnabled(!secondTabsEnabled())").
-                Click to toggle the tabs below (the last selected tab should be maintained upon re-rendering)
+            button(data-bind="click: () => isTabsContainerEnabled(!isTabsContainerEnabled())").
+                Click to toggle the red container's content below
+            p (The last selected tab will be restored upon re-rendering)
 
-        div(data-bind="if: secondTabsEnabled")
+        div(data-bind="if: isTabsContainerEnabled", style="padding: 30px; border: 2px solid red;")
             ko-tabs(params="keyForRestore: 'myRestorableTabs'")
                 ko-tab(params="label: 'Tab #1'")
                     p(style="color:red") This is the first tab's content..
@@ -66,6 +67,19 @@ block content
                 ko-tab(params="label: 'Tab #3'")
                     p(style="color:magenta") And this is the third tab's content...
 
+            h4 Btw.. `keyForRestore` and `preselected` can be combined:
+
+            ko-tabs(params="keyForRestore: 'myRestorableTabs2'")
+                ko-tab(params="label: 'Tab #1'")
+                    p(style="color:red") This is the first tab's content..
+                ko-tab(params="label: 'Tab #2'")
+                    p(style="color:green") And this is the second tab's content...
+                ko-tab(params="label: 'Tab #3', preselected: 1")
+                    p(style="color:magenta").
+                        And this is the third tab's content
+                    p This tab is <b>preselected ONCE</b> when the tabs get rendered first-time.
+                    p Thereafter, whatever tab was selected last, that one will get restored whenever the tabs get destroyed & re-rendered
+
 
 
     script(type="module").
@@ -73,5 +87,5 @@ block content
         import '../lib/koTabsComponent.js';
 
         ko.applyBindings({
-            secondTabsEnabled: ko.observable(true)
+            isTabsContainerEnabled: ko.observable(true)
         });
